--- a/r2dbc-spi/pom.xml
+++ b/r2dbc-spi/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>io.r2dbc</groupId>
         <artifactId>r2dbc-spi-parent</artifactId>
-        <version>1.0.0.NETIFI.M7</version>
+        <version>1.0.0.NETIFI.BUILD-SNAPSHOT</version>
     </parent>
 
     <artifactId>r2dbc-spi</artifactId>
