--- a/pom.xml
+++ b/pom.xml
@@ -187,12 +187,12 @@
         <snapshotRepository>
             <id>netifi-snapshots</id>
             <name>Netifi Snapshots</name>
-            <url>https://sonatype.netifiinc.com/repository/netifi-maven-snapshots/</url>
+            <url>https://nexus.netifi.com/repository/maven-snapshots/</url>
         </snapshotRepository>
         <repository>
             <id>netifi-releases</id>
             <name>Netifi Releases</name>
-            <url>https://sonatype.netifiinc.com/repository/netifi-maven-releases/</url>
+            <url>https://nexus.netifi.com/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
 </project>
